Planned encoder layers

--- a/SK_cs480e_final.ipynb
+++ b/SK_cs480e_final.ipynb
@@ -357,6 +357,19 @@
         "        super().__init__()\n",
         "\n",
         "        # ==== BEGIN SOLUTION CODE ====\n",
+        "        height = 28\n",
+        "        width = 28\n",
+        "        latent_dim = 128\n",
+        "\n",
+        "        # encoder layers\n",
+        "        self.convulution = nn.Conv2d(in_channels=1, out_channels=1, kernel_size=(6, 6))\n",
+        "        self.activation = nn.ReLU()\n",
+        "        self.flatten = nn.Flatten()\n",
+        "        conv_flatten = self.convulution.numel()\n",
+        "        self.eLinear = nn.Linear(conv_flatten, out_features=latent_dim)\n",
+        "\n",
+        "        # decoder layers\n",
+        "\n",
         "\n",
         "\n",
         "        # ==== END SOLUTION CODE ====\n",
@@ -390,7 +403,7 @@
       "metadata": {
         "id": "W9z_1RRt3_sk"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
