--- a/SK_cs480e_final.ipynb
+++ b/SK_cs480e_final.ipynb
@@ -363,13 +363,16 @@
         "\n",
         "        # encoder layers\n",
         "        self.convulution = nn.Conv2d(in_channels=1, out_channels=1, kernel_size=(6, 6))\n",
-        "        self.activation = nn.ReLU()\n",
+        "        self.relu = nn.ReLU()\n",
         "        self.flatten = nn.Flatten()\n",
-        "        conv_flatten = self.convulution.numel()\n",
-        "        self.eLinear = nn.Linear(conv_flatten, out_features=latent_dim)\n",
+        "        flat_size = self.convulution.numel()\n",
+        "        self.eLinear = nn.Linear(flat_size, latent_dim)\n",
         "\n",
         "        # decoder layers\n",
-        "\n",
+        "        self.dLinear = nn.Linear(latent_dim, flat_size)\n",
+        "        self.unflatten = nn.Unflatten(1, (1, flat_size, flat_size))\n",
+        "        self.transConvulution = nn.ConvTranspose2d(1, 1, kernel_size=(6, 6), stride=1)\n",
+        "        self.sigmoid = nn.Sigmoid()\n",
         "\n",
         "\n",
         "        # ==== END SOLUTION CODE ====\n",
@@ -403,7 +406,7 @@
       "metadata": {
         "id": "W9z_1RRt3_sk"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": []
     },
     {
